code simplified